--- a/docs/locale/fr/LC_MESSAGES/about/governance.po
+++ b/docs/locale/fr/LC_MESSAGES/about/governance.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Cécile Guarin, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Cécile Guarin, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,8 +36,8 @@ msgstr ""
 "La Norme relative aux données sur la propriété effective (« Beneficial "
 "Ownership Data Standard » ou BODS) est développée par `Open Ownership "
 "<https://www.openownership.org/>`_, une organisation à but non lucratif "
-"orientée vers la transparence de la propriété effective, en partenariat avec"
-" `Open Data Services <https://opendataservices.coop/>`_."
+"travaillant sur la transparence de la propriété effective, en partenariat "
+"avec `Open Data Services <https://opendataservices.coop/>`_."
 
 #: ../../about/governance.rst:6 979298d168ea43c484409e58475e6c50
 msgid ""
@@ -44,8 +45,8 @@ msgid ""
 "sharing and using beneficial ownership data."
 msgstr ""
 "Le développement de la norme BODS vise à répondre aux besoins en constante "
-"évolution des responsables de la collecte, du partage et de l'utilisation "
-"des données sur la propriété effective."
+"évolution des personnes qui collectent, partagent et utilisent les données "
+"sur la propriété effective."
 
 #: ../../about/governance.rst:8 34142492ba924560b029eb0470a43cb3
 msgid ""
@@ -54,9 +55,9 @@ msgid ""
 "Services in consultation with the Data Standard Working Group."
 msgstr ""
 "Au fur et à mesure de la conception de la version 1.0, Open Ownership et "
-"Open Data Services, avec l'aide consultative du groupe de travail sur la "
-"norme relative aux données, actualiseront les procédures de gouvernance et "
-"de développement de la norme BODS."
+"Open Data Services, en consultant le groupe de travail sur la norme relative"
+" aux données, actualiseront les procédures de gouvernance et de "
+"développement de la norme BODS."
 
 #: ../../about/governance.rst:10 6a1cb71b6a2543a0a283d7d1c1c2d4f5
 msgid ""
@@ -120,9 +121,9 @@ msgid ""
 msgstr ""
 "Il s'agit d'énoncés des problèmes rencontrés qui se concentrent sur les "
 "lacunes en matière de besoins des utilisateurs et utilisateurs dans la "
-"norme BODS devant éventuellement être satisfaits. Les tickets de "
-"développement des fonctionnalités actuellement ouverts sont répertoriés dans"
-" `l'outil de suivi des fonctionnalités de la norme BODS "
+"norme BODS devant éventuellement être comblées. Les tickets de développement"
+" des fonctionnalités actuellement ouverts sont répertoriés dans `l'outil de "
+"suivi des fonctionnalités de la norme BODS "
 "<https://github.com/openownership/data-standard/projects/4>`_. Les nouveaux "
 "tickets sont ajoutés en premier dans le backlog. Lorsqu'un ticket fait "
 "l'objet d'une recherche active ou est géré, il passe à l'étape de recherche."
@@ -136,7 +137,7 @@ msgid ""
 "<https://github.com/openownership/data-"
 "standard/discussions/categories/feature-implementation>`_."
 msgstr ""
-"Une fois que la nécessité pour les utilisateurs et les utilisatrices de "
+"Une fois que les besoins pour les utilisateurs et les utilisatrices de "
 "disposer d'une nouvelle fonctionnalité dans la norme BODS a été décrite dans"
 " un ticket de développement des fonctionnalités, il est possible de proposer"
 " une méthode de mise en œuvre. Actuellement, Open Ownership et Open Data "
@@ -150,8 +151,8 @@ msgid ""
 "If broad consensus about whether or not to proceed with implementation as "
 "laid out in the proposal can't be reached, the decision should be postponed."
 msgstr ""
-"Si aucun consensus ne peut être obtenu quant au lancement de la mise en "
-"œuvre telle que proposée, la décision doit être reportée."
+"Si aucun consensus ne peut être obtenu quant à la décision de procéder ou "
+"non à la mise en oeuvre proposée, la décision doit être reportée."
 
 #: ../../about/governance.rst:32 6e9323319e2f416d8cc5025fdb315a3f
 msgid "Release tracking"
@@ -188,8 +189,8 @@ msgid ""
 "adoption of the standard internationally."
 msgstr ""
 "Le groupe de travail sur la norme relative aux données rassemblent des "
-"spécialistes des données, techniques et au sein du pays afin de concevoir le"
-" développement de la norme BODS et de favoriser l'adoption de la norme à "
+"spécialistes des données et experts techniques locaux afin de concevoir le "
+"développement de la norme BODS et de favoriser l'adoption de la norme à "
 "l'international."
 
 #: ../../about/governance.rst:43 13212a0f468a4680950434d8b55d92a9
@@ -220,7 +221,7 @@ msgstr ""
 "Les membres du groupe de travail se proposent de manière spontanée. Toute "
 "personne peut demander à en faire partie en `remplissant ce formulaire "
 "<https://docs.google.com/forms/d/e/1FAIpQLSdRSmSUxyyv2t1k3vWXZ_3EhTW_f603MeGxgyjKnbNNE9vvbQ/viewform>`_"
-" après en avoir lu les `attributions "
+" après en avoir lu les `termes de référence "
 "<https://docs.google.com/document/d/1kNxojFM0BLZvUYlFWfayQ88CG7ffC-"
 "ypjMtrZxDDKmU/edit?usp=sharing>`_. Le groupe de travail se réunit en ligne "
 "tous les trimestres et communique à l'aide d'un groupe Google. Les membres "
