--- a/docs/locale/fr/LC_MESSAGES/codelist.po
+++ b/docs/locale/fr/LC_MESSAGES/codelist.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2024-05-10 16:05+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -651,10 +652,10 @@ msgid ""
 " governments and legislators in order to establish and guide agencies and "
 "entities linked to the state."
 msgstr ""
-"Contrôle d'une entité obtenu au moyen d'un cadre juridique, comme un "
-"ensemble de législation (primaire et secondaire). Ce type de participation "
-"est créé par les gouvernements et les législateurs dans le but d'établir et "
-"de guider les organismes et les entités liés à l'État."
+"Contrôle d'une entité obtenu via un cadre juridique, tel qu'un ensemble de "
+"mesures (législatives et règlementaires). Ce type de participation est créé "
+"par les gouvernements et les législateurs dans le but d'établir et de guider"
+" les organismes et les entités liés à l'État."
 
 #. title
 #: schema/codelists/interestType.csv:16
