--- a/docs/locale/fr/LC_MESSAGES/examples/index.po
+++ b/docs/locale/fr/LC_MESSAGES/examples/index.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,20 +61,20 @@ msgid ""
 msgstr ""
 "Cet exemple indique comment représenter la propriété effective d'une "
 "construction juridique de type trust avec la BODS. Une fiducie est "
-"enregistrée avec des informations sur le constituant et les fiduciaires "
-"divulgués. Le bénéficiaire est dispensé de divulgation."
+"enregistrée et des informations sur le constituant et les fiduciaires sont "
+"divulguées. Le bénéficiaire est dispensé de divulgation."
 
 #: ../../examples/index.rst:31 1a6ff90a6d624df39f6ef258501d4ac6
 msgid "An entity statement for a listed company"
-msgstr "Énoncé d'entité d'une société cotée"
+msgstr "Énoncé d'entité pour une société cotée"
 
 #: ../../examples/index.rst:33 58763970f5fd45d4a66160fe70ff53fc
 msgid ""
 "This statement demonstrates how the details of a listed company can be "
 "published in BODS format."
 msgstr ""
-"Cet énoncé indique comment publier les informations d'une société cotée dans"
-" le format de la BODS."
+"Cette énoncé montre comment les informations d'une société cotée peuvent "
+"être publiés au format BODS."
 
 #: ../../examples/index.rst:39 ac9303ea413d47b28daef39c7d4401b4
 msgid "Updating information over time 1"
@@ -88,7 +89,7 @@ msgid ""
 msgstr ""
 "Cet exemple illustre un transfert progressif de la propriété d'un "
 "bénéficiaire unique à un trust d'actionnariat salarié. Dans cet exemple, un "
-"bénéficiaire effectif doit être divulgué s'il possède au moins 25 % de la "
+"bénéficiaire effectif doit être déclaré s'il possède au moins 25 % de la "
 "société. La construction juridique du trust n'est pas divulguée."
 
 #: ../../examples/index.rst:43 61b8b7333fe641fba9c463c1013cf0c6
@@ -161,7 +162,7 @@ msgid ""
 "An additional 10% of shares are transferred to the trustee company, which "
 "now holds 70% of the shares."
 msgstr ""
-"10 % supplémentaires des actions sont transférés à la société de fiducie, "
+"10 % supplémentaires des actions sont transférés à la société fiduciaire, "
 "qui possède désormais 70 % des actions."
 
 #: ../../examples/index.rst:63 11d6ebf928f1402490169124e0f7634b
@@ -178,9 +179,9 @@ msgid ""
 "now holds 80% of the shares. The original owner is now below the threshold "
 "for reporting and is no longer disclosed as a beneficial owner."
 msgstr ""
-"10 % supplémentaires des actions sont transférés à la société de fiducie, "
+"10 % supplémentaires des actions sont transférés à la société fiduciaire, "
 "qui possède désormais 80 % des actions. La propriétaire initiale est à "
-"présent en dessous du seuil de déclaration et n'est plus divulguée comme "
+"présent en dessous du seuil de déclaration et n'est plus déclarée comme "
 "bénéficiaire effectif."
 
 #: ../../examples/index.rst:68 5c864f2cee124679b94bbf7abfaab476
@@ -242,8 +243,8 @@ msgstr ""
 "En avril 2021, l'un des bénéficiaires décède et ses actions sont transférées"
 " à son plus proche parent. Au lancement du processus de confirmation annuel,"
 " la comptable de Fermcat est invitée à indiquer ce changement dans le "
-"registre. Après la mise à jour du registre, elle dépose l'énoncé de "
-"confirmation."
+"registre. Après la mise à jour du registre, elle dépose la confirmation de "
+"énoncé."
 
 #: ../../examples/index.rst:88 e950c2d3ce2b441ca8491e803a58e1f7
 msgid "2022-01-21"
@@ -267,8 +268,8 @@ msgid ""
 "repository. These examples include representing indirect ownership, use of "
 "annotations, and representing state owned enterprises."
 msgstr ""
-"Le référentiel contient d'autres exemples de fichiers JSON valides de la "
-"BODS. Ces exemples incluent la représentation de la propriété indirecte, "
+"Le référentiel contient d'autres exemples de fichiers JSON BODS valides. Ces"
+" exemples incluent la représentation de la propriété indirecte, "
 "l'utilisation d'annotations et la représentation des entreprises publiques."
 
 #: ../../examples/index.rst:96 de00e70daac248dfa5fa312d1f6b6b6a
