--- a/docs/locale/fr/LC_MESSAGES/schema.po
+++ b/docs/locale/fr/LC_MESSAGES/schema.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2024-05-10 16:05+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -704,7 +705,7 @@ msgstr ""
 #. /$defs/PublicListing/properties/hasPublicListing/title
 #: schema/entity-record.json:1
 msgid "Has Public Listing"
-msgstr "Cotise en bourse"
+msgstr "Est coté en bourse"
 
 #. /$defs/PublicListing/properties/hasPublicListing/description
 #: schema/entity-record.json:1
@@ -815,7 +816,7 @@ msgstr ""
 #. /$defs/SecuritiesListing/properties/stockExchangeJurisdiction/title
 #: schema/entity-record.json:1
 msgid "Stock Exchange Jurisdiction"
-msgstr "Juridiction de la bourse"
+msgstr "Juridiction du marché boursier"
 
 #. /$defs/SecuritiesListing/properties/stockExchangeJurisdiction/description
 #: schema/entity-record.json:1
@@ -831,7 +832,7 @@ msgstr ""
 #. /$defs/SecuritiesListing/properties/stockExchangeName/title
 #: schema/entity-record.json:1
 msgid "Stock Exchange Name"
-msgstr "Nom de la bourse"
+msgstr "Nom du marché boursier"
 
 #. /$defs/SecuritiesListing/properties/stockExchangeName/description
 #: schema/entity-record.json:1
@@ -1208,7 +1209,7 @@ msgstr "Juridiction où la personne est politiquement exposée."
 #. /$defs/PepStatusDetails/properties/startDate/title
 #: schema/person-record.json:1
 msgid "State Date"
-msgstr "Date de statut"
+msgstr "Date d'obtention du statut"
 
 #. /$defs/PepStatusDetails/properties/startDate/description
 #: schema/person-record.json:1
@@ -1219,10 +1220,10 @@ msgid ""
 "(first) month. This rounding SHOULD be noted in accompanying guidance (such "
 "as a publication policy or data use guide)."
 msgstr ""
-"Date à laquelle cette personne avait le statut de personne politiquement "
-"exposée (PPE). La date DOIT respecter le format AAAA-MM-JJ. En cas d'absence"
-" de précision sur le mois ou la date, la valeur peut être arrondie au "
-"premier jour du (premier) mois. Cet arrondi DEVRAIT être noté dans les "
+"Date à laquelle cette personne a obtenu le statut de personne politiquement "
+"exposée (PPE)\". La date DOIT respecter le format AAAA-MM-JJ. En cas "
+"d'absence de précision sur le mois ou la date, la valeur peut être arrondie "
+"au premier jour du (premier) mois. Cet arrondi DEVRAIT être noté dans les "
 "documents relatifs (comme une politique de publication ou un guide "
 "d'utilisation des données)."
 
