--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/dates-guidance.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/dates-guidance.po
@@ -6,6 +6,7 @@
 # Translators:
 # Katia Da Silva, 2024
 # Cécile Guarin, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Cécile Guarin, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -151,8 +152,8 @@ msgid ""
 msgstr ""
 "Quand des dates arrondies sont utilisées, il convient d'en informer les "
 "utilisateurs et les utilisatrices des données afin d'éviter tout malentendu."
-" Les éditeurs doivent créer des conseils en conséquence à destination des "
-"utilisateurs et des utilisatrices des données."
+" Les éditeurs doivent créer des lignes directrices en conséquence à "
+"destination des utilisateurs et des utilisatrices des données."
 
 #: ../../standard/modelling/dates-guidance.rst:30
 #: 590bd419c88640da946997eac03777f5
