--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/identifiers.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/identifiers.po
@@ -6,6 +6,7 @@
 # Translators:
 # Rachel Vint, 2024
 # Cécile Guarin, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Cécile Guarin, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -239,7 +240,7 @@ msgid ""
 "including at least the document number."
 msgstr ""
 "Les numéros de passeport doivent respecter le format de la ligne de "
-"l'identifiant sur un passeport lisible à la machine (voir l'`annexe B de la "
+"l'identifiant sur un passeport lisible par machine (voir l'`annexe B de la "
 "section 4 du document 9303 de l'OACI "
 "<http://www.icao.int/publications/Documents/9303_p4_cons_fr.pdf>`_) et "
 "comprendre au minimum le numéro de document."
@@ -405,9 +406,10 @@ msgstr ""
 "Quand une :ref:`cotation des valeurs mobilières <schema-securities-listing>`"
 " est fournie, elle doit comprendre une valeur pour le champ ``ticker``. "
 "Ainsi, il est possible d'effectuer le suivi des négociations pour ce titre "
-"sur le marché identifié Or, les titres peuvent se négocier sur plusieurs "
-"marchés. Par conséquent, il est recommandé de fournir un identifiant unique "
-"à l'international. Les schémas d'identification pris en charge pour les "
-"valeurs mobilières sont répertoriés sur la :ref:`page Référence du schéma "
-"<schema-reference>`. Le schéma d'identification et l'identifiant du titre "
-"doivent être édités dans les champs ``idScheme`` et ``id``, respectivement."
+"sur le marché identifié. Toutefois, les titres peuvent se négocier sur "
+"plusieurs marchés. Par conséquent, il est recommandé de fournir un "
+"identifiant unique à l'international. Les schémas d'identification pris en "
+"charge pour les valeurs mobilières sont répertoriés sur la :ref:`page "
+"Référence du schéma <schema-reference>`. Le schéma d'identification et "
+"l'identifiant du titre doivent être édités dans les champs ``idScheme`` et "
+"``id``, respectivement."
