--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/languages.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/languages.po
@@ -6,6 +6,7 @@
 # Translators:
 # Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -76,14 +77,14 @@ msgstr "Dans l'annotation :"
 
 #: ../../standard/modelling/languages.rst:20 dd0d2e55cdbd436fbb60124a4bbcb4cc
 msgid "``motivation`` MUST be ‘transformation’"
-msgstr "``motivation`` doit être configuré sur ‘transformation’ ;"
+msgstr "``motivation`` DOIT être configuré sur ‘transformation’ ;"
 
 #: ../../standard/modelling/languages.rst:22 548ad5151e9e489fb87c89880ad8461b
 msgid ""
 "``description`` SHOULD explain the type of transformation (e.g. "
 "‘translation’)"
 msgstr ""
-"``description`` doit expliquer le type de transformation (par ex., "
+"``description`` DOIT expliquer le type de transformation (par ex., "
 "‘translation’) ;"
 
 #: ../../standard/modelling/languages.rst:24 b957053c6b7a43e49105b321cdd4d71b
