--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/record-ids.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/record-ids.po
@@ -6,6 +6,7 @@
 # Translators:
 # Rachel Vint, 2024
 # Cécile Guarin, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Cécile Guarin, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +34,7 @@ msgid ""
 " entity and relationship) in each beneficial ownership network."
 msgstr ""
 "Afin de publier des données relatives aux bénéficiaires effectifs dans la "
-"norme BODS, un système de gestion des informations doit conserver les "
+"norme BODS, un système de gestion des informations DOIT conserver les "
 "identifiants d'enregistrement pour chaque élément (c'es-à-dire une personne,"
 " une entité et une relation) au sein de chaque réseau des bénéficiaires "
 "effectifs."
@@ -124,7 +125,7 @@ msgid ""
 "owner) and it also discloses Beta Systems as a legal owner."
 msgstr ""
 "Alpha Corp. déclare une personne physique en tant que bénéficiaire effectif "
-"(et propriétaire légal), mais aussi désigne Beta Systems comme propriétaire "
+"(et propriétaire légal), mais désigne aussi Beta Systems comme propriétaire "
 "légal."
 
 #: ../../standard/modelling/record-ids.rst-1 56ab238866964620b1f7b1f9036635f7
