--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-state-owned-enterprises.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-state-owned-enterprises.po
@@ -5,8 +5,9 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
-# Rachel Vint, 2024
 # Cécile Guarin, 2024
+# Rachel Vint, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Cécile Guarin, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -147,7 +148,7 @@ msgstr ""
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:38
 #: d8c021219bcc40a1a10f644e847fec64
 msgid "Ownership by regional government"
-msgstr "Propriété par un gouvernement régional"
+msgstr "Propriété par un administration régionale"
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:40
 #: 511262e870774b73875fc5d5960b3cb3
@@ -155,8 +156,8 @@ msgid ""
 "Ownership or control by a regional state government is known and a statement"
 " about these interests is possible."
 msgstr ""
-"La propriété ou le contrôle par un gouvernement régional est connu(e) et un "
-"énoncé sur ces participations au capital est possible."
+"La propriété ou le contrôle par un administration régional est connu(e) et "
+"un énoncé sur ces participations au capital est possible."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst-1
 #: a919d42096744f1aade937e1ef98a75e
@@ -210,7 +211,7 @@ msgstr ""
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:58
 #: 746ef90914c4492bae02a4ed1a20e8c4
 msgid "Golden share provision"
-msgstr "Disposition relative aux actions spécifiques"
+msgstr "Clauses d'actions spécifiques"
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:60
 #: 6351b146e71b426b9516b9f48712b53d
@@ -218,8 +219,8 @@ msgid ""
 "Control through a golden share provision in company articles or shareholder "
 "agreement."
 msgstr ""
-"Un contrôle s'exerce grâce à une disposition relative aux actions "
-"spécifiques dans les statuts d'une entreprise ou les accords d'actionnaires."
+"Un contrôle s'exerce grâce à une clause d'actions spécifiques dans les "
+"statuts d'une entreprise ou les accords d'actionnaires."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst-1
 #: cd40e7e0e8284f79a156e392de1b8fdc
@@ -313,7 +314,8 @@ msgid ""
 " entity (GLIE)."
 msgstr ""
 "Les participations au capital d'une entreprise publique détenues par un État"
-" sont gérées par une entité d'investissement gouvernementale."
+" sont gérées par une entité d'investissement gouvernementale (Government-"
+"Linked Investment Entity - GLIE)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst-1
 #: 3b4deaf888464255bae854b9fbd4edef
