--- a/docs/locale/fr/LC_MESSAGES/standard/system/serialisation.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/system/serialisation.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Rachel Vint, 2024
 # Katia Da Silva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,7 +51,7 @@ msgid ""
 "Escape characters that might cause problems when ingesting data (for "
 "example: &, <)."
 msgstr ""
-"échapper les caractères qui pourraient causer des problèmes lors de "
+"Caractères d'échappement qui pourraient causer des problèmes lors de "
 "l'ingestion des données (par exemple : &, <)."
 
 #: ../../standard/system/serialisation.rst:11 cd6abb160e9c45eb80dd06b15214540b
