--- a/docs/locale/ru/LC_MESSAGES/standard/system/serialisation.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/system/serialisation.po
@@ -8,6 +8,7 @@
 # Kateryna Volobuieva, 2024
 # Rachel Vint, 2024
 # Dmitry Chaplinsky <chaplinsky.dmitry@gmail.com>, 2024
+# Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # 
 #, fuzzy
 msgid ""
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Dmitry Chaplinsky <chaplinsky.dmitry@gmail.com>, 2024\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,8 +37,8 @@ msgid ""
 "international.org/publications-and-standards/standards/ecma-404/>`_. It is "
 "RECOMMENDED that publishers:"
 msgstr ""
-"Общепринятая сериализация данных СДБВ представлена в виде документа JSON. "
-"Эквивалентные спецификации JSON приводятся в стандартах `IETF RFC 8256 "
+"Общепринятым форматом сериализации для СДБВ есть JSON. Эквивалентные "
+"спецификации JSON приводятся в стандартах `IETF RFC 8256 "
 "<https://tools.ietf.org/html/rfc8259>`_ и `ECMA 404 <https://ecma-"
 "international.org/publications-and-standards/standards/ecma-404/>`_. "
 "Издателям РЕКОМЕНДУЕТСЯ:"
