--- a/docs/locale/ru/LC_MESSAGES/codelist.po
+++ b/docs/locale/ru/LC_MESSAGES/codelist.po
@@ -487,7 +487,7 @@ msgid ""
 "shareholder, having voting rights or having the absolute right to appoint to"
 " the board."
 msgstr ""
-"Любое влияние или контроль в сущности, которые отличаются от статуса "
+"Любое влияние или контроль в субъекте, которые отличаются от статуса "
 "акционера, наличия прав голоса или абсолютного права назначать членов "
 "коллегиального органа управления."
 
@@ -643,7 +643,7 @@ msgid ""
 "Control of an entity gained through a provision in company articles or by "
 "shareholder agreement."
 msgstr ""
-"Контроль над сущностью, полученный в соответствии с положениями устава "
+"Контроль над субъектом, полученный в соответствии с положениями устава "
 "компании или соглашения с акционерами."
 
 #. title
@@ -659,7 +659,7 @@ msgid ""
 " governments and legislators in order to establish and guide agencies and "
 "entities linked to the state."
 msgstr ""
-"Контроль над сущностью, полученный через правовой механизм, например "
+"Контроль над субъектом, полученный через правовой механизм, например "
 "сочетание законодательства (первичного и вторичного). Такой тип доли участия"
 " создается правительством или депутатами с целью учреждения агентств и "
 "субъектов, связанных с государством, и управления ними."
