--- a/docs/locale/ru/LC_MESSAGES/schema.po
+++ b/docs/locale/ru/LC_MESSAGES/schema.po
@@ -651,7 +651,7 @@ msgid ""
 msgstr ""
 "Если доступен постоянный URI "
 "(https://en.wikipedia.org/wiki/Uniform_Resource_Identifier), его необходимо "
-"включить для такой сущности."
+"включить для такого субъекта."
 
 #. /properties/publicListing/title
 #. /$defs/PublicListing/title
@@ -668,7 +668,7 @@ msgid ""
 "regulatory filings."
 msgstr ""
 "Информация о регистрации на фондовой бирже компании, ее ценных бумаг (акций "
-"и других продаваемых финансовых инструментов, связанных с сущностью), и "
+"и других продаваемых финансовых инструментов, связанных с субъектом), и "
 "связанными с ними документами, поданными в регулирующие органы."
 
 #. /properties/formedByStatute/title
@@ -1424,7 +1424,7 @@ msgid ""
 msgstr ""
 "То, какую долю участия имеет заинтересованная сторона — прямую или "
 "косвенную. Значение ДОЛЖНО быть 'indirect' (косвенная), если присутствуют "
-"промежуточные сущности или агенты, и 'direct' (прямая), если таких "
+"промежуточные субъекты или агенты, и 'direct' (прямая), если таких "
 "посредников нет. В противном случае значение ДОЛЖНО быть 'unknown' "
 "(неизвестно)."
 
